# scorer

./: flake.nix  lock.json  pyproject.toml
src/biobarna-scorer/: boxes.py  rasterise.py  scorer.py
